src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Crossmediale_Kampagne__c</fullName>
        <description>Welche Media-Segmente werden mit dieser B2B Aktion angesprochen?</description>
        <inlineHelpText>Welche Media-Segmente werden mit dieser B2B Aktion angesprochen?</inlineHelpText>
        <label>Crossmediale B2B Aktion</label>
        <picklist>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teletext</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HbbTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRTV</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Print Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Seminars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Call Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Banners/Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_B2B_Aktion_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B2B Aktion ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Landingpage__c</fullName>
        <label>Landingpage</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_SphereCopy__c</fullName>
        <description>Zuordnung zur jeweiligen Sphere Hilfefeld für die Freigabeeinstellung</description>
        <inlineHelpText>uordnung zur jeweiligen Sphere Hilfefeld für die Freigabeeinstellung</inlineHelpText>
        <label>P7S1_SphereCopy</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Sphere__c</fullName>
        <description>Zuordnung zur jeweiligen Sphere</description>
        <formula>Text( Owner.P7S1_Sphere__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zuordnung zur jeweiligen Sphere</inlineHelpText>
        <label>P7S1_Sphere</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RW_Prognose__c</fullName>
        <description>Welche Reichweiten Prognose liegt für diese B2BAktion vor?</description>
        <inlineHelpText>Welche Reichweiten Prognose liegt für diese B2BAktion vor?</inlineHelpText>
        <label>Reichweiten-Prognose</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_B2bAktionsmutter__c</fullName>
        <description>Hilffeld um die Hierarchiemutter der B2B Aktionshierarchie zu erhalten. Wird benötigt für den Link &quot;B2B Aktionshierarchie Opportunities&quot;</description>
        <formula>IF( Parent.Name = &quot;&quot;, Name ,
IF(Parent.Parent.Name = &quot;&quot;, Parent.Name , 
IF(Parent.Parent.Parent.Name = &quot;&quot;, Parent.Parent.Name , 
IF(Parent.Parent.Parent.Parent.Name = &quot;&quot;, Parent.Parent.Parent.Name , 
IF(Parent.Parent.Parent.Parent.Parent.Name = &quot;&quot;, Parent.Parent.Parent.Parent.Name , 

Parent.Parent.Parent.Parent.Parent.Name ) ) )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hilffeld um die Hierarchiemutter der B2B Aktionshierarchie zu erhalten. Wird benötigt für den Link &quot;B2B Aktionshierarchie Opportunities&quot;</inlineHelpText>
        <label>B2B Aktionsmutter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Conversion__c</fullName>
        <description>Wie viele Angebote dieser B2B-Aktion wurden erfolgreich abgeschlossen?</description>
        <formula>IF((NumberOfWonOpportunities&gt;0), ( NumberOfWonOpportunities/NumberOfOpportunities), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Wie viele Angebote dieser B2B-Aktion wurden erfolgreich abgeschlossen?</inlineHelpText>
        <label>Conversion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_ZielgruppeBranche__c</fullName>
        <description>Für welche Branche ist dieses  Angebot möglicherweise relevant.
Mehrfachauswahl ist möglich.</description>
        <inlineHelpText>Für welche Branche ist dieses  Angebot möglicherweise relevant.
Mehrfachauswahl ist möglich.</inlineHelpText>
        <label>Zielgruppe Branche</label>
        <picklist>
            <picklistValues>
                <fullName>Bau-Wirtschaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer + Büro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dienstleistungen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ernährung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finanzen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freizeit + Sport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gesundheit + Pharmazie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Getränke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handel + Versand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haus-, Land-,Forst-, Jagdwirtschaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haus- + Gartenausstattung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrielle Verbrauchsgüter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investitionsgüter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Körperpflege</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kraftfahrzeugmarkt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kunst + Kultur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Persönlicher Bedarf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinigung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sonstige Werbung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tabak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telekommunikation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Textilien + Bekleidung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Touristik + Gastronomie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unterhaltungselektronik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verkehrsmittel + Einrichtung</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Absage__c</fullName>
        <description>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Absage&quot;</description>
        <inlineHelpText>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Absage&quot;</inlineHelpText>
        <label>Absage</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_Angeklickt__c</fullName>
        <description>Absolute Zahl, Reaktion auf das ausgelieferte Werbemittel (Plakat, Online-Banner etc.)</description>
        <inlineHelpText>Absolute Zahl, Reaktion auf das ausgelieferte Werbemittel (Plakat, Online-Banner etc.)</inlineHelpText>
        <label>Angeklickt</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_Ausgeliefert__c</fullName>
        <description>Absolute Zahl, Die Aktion wurde X mal ausgeliefert.</description>
        <inlineHelpText>Absolute Zahl, Die Aktion wurde X mal ausgeliefert.</inlineHelpText>
        <label>Ausgeliefert</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_B2BAktionsKategorie__c</fullName>
        <description>Auswahl der zutreffenden B2B-Aktions-Kategorie, z.B. Event oder Plakat</description>
        <inlineHelpText>Auswahl der zutreffenden B2B-Aktions-Kategorie, z.B. Event oder Plakat</inlineHelpText>
        <label>B2B-Aktions-Kategorie</label>
        <picklist>
            <picklistValues>
                <fullName>E-Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postversand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telefon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plakat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anzeige</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On the Ground</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_BestaetigungVerschickt__c</fullName>
        <description>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Bestätigung verschickt&quot;</description>
        <inlineHelpText>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Bestätigung verschickt&quot;</inlineHelpText>
        <label>Bestätigung verschickt</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_Bestaetigungsmail__c</fullName>
        <description>geplanter Versandtermin</description>
        <inlineHelpText>geplanter Versandtermin</inlineHelpText>
        <label>Bestätigungsmail</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomTv_BitteAufVerteilerSetzen__c</fullName>
        <description>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Bitte auf Verteiler setzen&quot;</description>
        <inlineHelpText>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Bitte auf Verteiler setzen&quot;</inlineHelpText>
        <label>Bitte auf Verteiler setzen</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_BitteEinladen__c</fullName>
        <description>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Bitte einladen&quot;</description>
        <inlineHelpText>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Bitte einladen&quot;</inlineHelpText>
        <label>Bitte einladen</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_BitteNachladen__c</fullName>
        <description>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Bitte nachladen&quot;</description>
        <inlineHelpText>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Bitte nachladen&quot;</inlineHelpText>
        <label>Bitte nachladen</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_DankeVerschickt__c</fullName>
        <description>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Danke verschickt&quot;</description>
        <inlineHelpText>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Danke verschickt&quot;</inlineHelpText>
        <label>Danke verschickt</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_DankmailDatum__c</fullName>
        <description>geplanter Versandtermin</description>
        <inlineHelpText>geplanter Versandtermin</inlineHelpText>
        <label>Dankemail</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomTv_DeadlineFuerVerteiler__c</fullName>
        <description>Schlussdatum zur Fertigstellung des Verteilers</description>
        <inlineHelpText>Schlussdatum zur Fertigstellung des Verteilers</inlineHelpText>
        <label>Deadline für Verteiler</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomTv_Dienstleister__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An der B2B Aktion beteiligter Dienstleister (Auswahl aus Account)</description>
        <inlineHelpText>An der B2B Aktion beteiligter Dienstleister (Auswahl aus Account)</inlineHelpText>
        <label>Dienstleister</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dienstleister (Kampagnen)</relationshipLabel>
        <relationshipName>Kampagnen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_EinladungVerschickt__c</fullName>
        <description>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Einladung verschickt&quot;</description>
        <inlineHelpText>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Einladung verschickt&quot;</inlineHelpText>
        <label>Einladung verschickt</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_Einladung__c</fullName>
        <description>geplanter Versandtermin</description>
        <inlineHelpText>geplanter Versandtermin</inlineHelpText>
        <label>Einladung</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomTv_FeedbackGegeben__c</fullName>
        <description>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Feedback gegeben&quot;</description>
        <inlineHelpText>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Feedback gegeben&quot;</inlineHelpText>
        <label>Feedback gegeben</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_Fehlerhaft__c</fullName>
        <description>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Fehlerhaft&quot;</description>
        <inlineHelpText>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Fehlerhaft&quot;</inlineHelpText>
        <label>Fehlerhaft</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_GesamteGaeste__c</fullName>
        <description>Anzahl der zusätzlich zu den B2B Aktionsmitgliedern gemeldeten Gäste</description>
        <inlineHelpText>Anzahl der zusätzlich zu den B2B Aktionsmitgliedern gemeldeten Gäste</inlineHelpText>
        <label>Gesamte Gäste</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_GewinnVerschickt__c</fullName>
        <description>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Gewinn verschickt&quot;</description>
        <inlineHelpText>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Gewinn verschickt&quot;</inlineHelpText>
        <label>Gewinn verschickt</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_Gewinner__c</fullName>
        <description>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Gewinner&quot;</description>
        <inlineHelpText>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Gewinner&quot;</inlineHelpText>
        <label>Gewinner</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_HardBounce__c</fullName>
        <description>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Hard Bounce&quot;</description>
        <inlineHelpText>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Hard Bounce&quot;</inlineHelpText>
        <label>Hard Bounce</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_Hyperlink__c</fullName>
        <description>z.B. Link auf Onlineversion eines E-Mailings, Website, PDF oder Bild</description>
        <inlineHelpText>z.B. Link auf Onlineversion eines E-Mailings, Website, PDF oder Bild</inlineHelpText>
        <label>Hyperlink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SomTv_Infos__c</fullName>
        <description>Zusätzliche Ausführungen / Anmerkungen</description>
        <inlineHelpText>Zusätzliche Ausführungen / Anmerkungen</inlineHelpText>
        <label>Infos</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SomTv_InitiatorDerB2BAktion__c</fullName>
        <description>Für welchen Sender, Firma etc. wird die Aktion vorgenommen.</description>
        <inlineHelpText>Für welchen Sender, Firma etc. wird die Aktion vorgenommen.</inlineHelpText>
        <label>Initiator der B2B-Aktion</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_IstGesamtkosten__c</fullName>
        <description>Wie hoch ist der Betrag, der insgesamt für die Aktion verbucht wurde?</description>
        <inlineHelpText>Wie hoch ist der Betrag, der insgesamt für die Aktion verbucht wurde?</inlineHelpText>
        <label>Ist Gesamtkosten (€)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_KampagneIntern__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ist es eine P7S1 interne Aktion?</description>
        <inlineHelpText>Ist es eine P7S1 interne Aktion?</inlineHelpText>
        <label>B2B Aktion INTERN ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_KampagnenMilestones__c</fullName>
        <description>Festlegen von projektrelevanten Ereignissen (Meilenstein)</description>
        <inlineHelpText>Festlegen von projektrelevanten Ereignissen (Meilenstein)</inlineHelpText>
        <label>B2B Milestones</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SomTv_Klickrate__c</fullName>
        <description>Wird von CRM eingetragen</description>
        <inlineHelpText>Wird von CRM eingetragen</inlineHelpText>
        <label>Klickrate (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_KostenProGewinner__c</fullName>
        <description>Istkosten Gesamt (€) / Gesamte Gewinner</description>
        <formula>SomTv_IstGesamtkosten__c /  SomTv_Gewinner__c</formula>
        <inlineHelpText>Istkosten Gesamt (€) / Gesamte Gewinner</inlineHelpText>
        <label>Kosten pro Gewinner (€)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_KostenProKlick__c</fullName>
        <description>Kosten/Angeklickt</description>
        <formula>SomTv_IstGesamtkosten__c /  SomTv_Angeklickt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Kosten/Angeklickt</inlineHelpText>
        <label>Kosten pro Klick (€)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_KostenProTeilnehmer__c</fullName>
        <description>IstGesamtkosten / Teilnehmer</description>
        <formula>SomTv_IstGesamtkosten__c /  SomTv_Teilnehmer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IstGesamtkosten / Teilnehmer</inlineHelpText>
        <label>Kosten pro Teilnehmer (€)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_LocationOrt__c</fullName>
        <description>Ort, an dem die B2B Aktion stattfindet</description>
        <inlineHelpText>Ort, an dem die B2B Aktion stattfindet</inlineHelpText>
        <label>Location/Ort</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SomTv_MigrationsKey__c</fullName>
        <externalId>true</externalId>
        <label>MigrationsKey</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomTv_NachladungDatum__c</fullName>
        <description>geplanter Versandtermin</description>
        <inlineHelpText>geplanter Versandtermin</inlineHelpText>
        <label>Nachmeldung</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomTv_NachladungVerschickt__c</fullName>
        <description>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Nachladung verschickt&quot;</description>
        <inlineHelpText>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Nachladung verschickt&quot;</inlineHelpText>
        <label>Nachladung verschickt</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_NichtTeilnahmequote__c</fullName>
        <description>Ergibt sich aus Status &quot;Gesamte Kontakte&quot; / &quot;Nicht-Teilnehmer&quot;</description>
        <formula>SomTv_NichtTeilnehmer__c/NumberOfContacts</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ergibt sich aus Status &quot;Gesamte Kontakte&quot; / &quot;Nicht-Teilnehmer&quot;

( NumberOfContacts / 100) *SomTv_NichtTeilnehmer__c</inlineHelpText>
        <label>Nicht-Teilnahmequote (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_NichtTeilnehmer__c</fullName>
        <description>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Nicht-Teilnehmer&quot;</description>
        <inlineHelpText>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Nicht-Teilnehmer&quot;</inlineHelpText>
        <label>Nicht-Teilnehmer</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_Oeffnungsrate__c</fullName>
        <description>Wird von CRM eingetragen</description>
        <inlineHelpText>Wird von CRM eingetragen</inlineHelpText>
        <label>Öffnungsrate (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_OpportunitiesMN3Gesamt__c</fullName>
        <description>Gesamtwert MN3 aller Opportunities der Kampagne</description>
        <inlineHelpText>Gesamtwert MN3 aller Opportunities der Kampagne</inlineHelpText>
        <label>Gesamtwert Opportunities MN3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_OpportunitiesMN3Gewonnen__c</fullName>
        <description>Gesamtwert MN3 aller gewonnenen Opportunities</description>
        <inlineHelpText>Gesamtwert MN3 aller gewonnenen Opportunities</inlineHelpText>
        <label>Gesamtwert gewonnener Opportunities MN3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_ProRexKamID__c</fullName>
        <label>ProRex-Aktions-ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_ProduktionExtern__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ist es eine externe Produktion?</description>
        <inlineHelpText>Ist es eine externe Produktion?</inlineHelpText>
        <label>Produktion EXTERN ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_Projektbeginn__c</fullName>
        <description>Datum zu dem die B2B-Aktion in Planung geht.</description>
        <inlineHelpText>Datum zu dem die B2B-Aktion in Planung geht.</inlineHelpText>
        <label>Projektbeginn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomTv_ReminderVerschickt__c</fullName>
        <description>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Reminder verschickt&quot;</description>
        <inlineHelpText>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Reminder verschickt&quot;</inlineHelpText>
        <label>Reminder verschickt</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_Reminder__c</fullName>
        <description>geplanter Versandtermin</description>
        <inlineHelpText>geplanter Versandtermin</inlineHelpText>
        <label>Reminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomTv_SaveTheDateDatum__c</fullName>
        <description>geplanter Versandtermin</description>
        <inlineHelpText>geplanter Versandtermin</inlineHelpText>
        <label>Save the Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomTv_SaveTheDateVerschickt__c</fullName>
        <description>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Save the Date verschickt&quot;</description>
        <inlineHelpText>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Save the Date verschickt&quot;</inlineHelpText>
        <label>Save the Date verschickt</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_SollwertTeilnahmequote__c</fullName>
        <description>Prozentuale Zahl zur gewünschten Reaktion der Aktionsmitglieder, z.B. Teilnahme am Gewinnspiel etc.</description>
        <inlineHelpText>Prozentuale Zahl zur gewünschten Reaktion der Aktionsmitglieder, z.B. Teilnahme am Gewinnspiel etc.</inlineHelpText>
        <label>Sollwert Teilnahmequote (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_Teilnahmequote__c</fullName>
        <description>Ergibt sich aus Status &quot;Gesamte Kontakte&quot; / &quot;Teilnehmer inkl. Gäste&quot;, daher größer 100% möglich ..</description>
        <formula>SomTv_Teilnehmer__c/NumberOfContacts</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ergibt sich aus Status &quot;Gesamte Kontakte&quot; / &quot;Teilnehmer inkl. Gäste&quot;, daher größer 100% möglich ..</inlineHelpText>
        <label>Teilnahmequote (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_Teilnehmer__c</fullName>
        <description>Ergibt sich aus alle B2B-Aktionsmitglieder (+Gäste) mit Status &quot;Teilnehmer&quot;</description>
        <inlineHelpText>Ergibt sich aus alle B2B-Aktionsmitglieder (+Gäste) mit Status &quot;Teilnehmer&quot;</inlineHelpText>
        <label>Teilnehmer</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_UhrzeitEnde__c</fullName>
        <description>Datum/Uhrzeit vom Ende der B2B Aktion</description>
        <inlineHelpText>Datum/Uhrzeit vom Ende der B2B Aktion</inlineHelpText>
        <label>Ende (Datum/Uhrzeit)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SomTv_UhrzeitStart__c</fullName>
        <description>Datum/Uhrzeit vom Beginn der B2B Aktion</description>
        <inlineHelpText>Datum/Uhrzeit vom Beginn der B2B Aktion</inlineHelpText>
        <label>Start (Datum/Uhrzeit)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SomTv_Versandweg__c</fullName>
        <description>Kommunikationsmittel zum Versand der B2B-Aktionsinhalte</description>
        <inlineHelpText>Kommunikationsmittel zum Versand der B2B-Aktionsinhalte</inlineHelpText>
        <label>Kommunikationsweg</label>
        <picklist>
            <picklistValues>
                <fullName>Outlook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM-DL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poststelle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Versendet__c</fullName>
        <description>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Versendet&quot;</description>
        <inlineHelpText>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Versendet&quot;</inlineHelpText>
        <label>Versendet</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_ZielAntworten__c</fullName>
        <description>Absolute Zahl, vom Aktionsinhaber gewünschte Reaktion der Aktionsmitglieder, z.B. per E-Mail etc.</description>
        <inlineHelpText>Absolute Zahl, vom Aktionsinhaber gewünschte Reaktion der Aktionsmitglieder, z.B. per E-Mail etc.</inlineHelpText>
        <label>Ziel Antworten</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_ZielResponse__c</fullName>
        <label>Ziel Response</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_Zusage__c</fullName>
        <description>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Zusage&quot;</description>
        <inlineHelpText>Ergibt sich aus Alle B2B-Aktionsmitglieder mit Status = &quot;Zusage&quot;</inlineHelpText>
        <label>Zusage</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_ZweiteNachmeldung__c</fullName>
        <description>geplanter Versandtermin</description>
        <inlineHelpText>geplanter Versandtermin</inlineHelpText>
        <label>zweite Nachmeldung</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomTv_geplanter_Versand__c</fullName>
        <description>Für wann ist der Versand geplant.</description>
        <inlineHelpText>Für wann ist der Versand geplant.</inlineHelpText>
        <label>geplanter Versand</label>
        <type>Date</type>
    </fields>
</CustomObject>